--- a/src/scss/object/project/_home.scss
+++ b/src/scss/object/project/_home.scss
@@ -51,12 +51,21 @@
 .p-top-heading__titleImg {
   // margin-bottom: -30px;
   width: 40%;
+  @include mq(u-sp) {
+    width: 70%;
+    margin-bottom: 30px;
+    order: -1;
+  }
 }
 
 .p-top-heading__horizontal {
   display: flex;
   justify-content: space-around;
   width: 100%;
+  @include mq(u-sp) {
+    justify-content: center;
+    margin-bottom: 20px;
+  }
 }
 
 .p-top-heading__vertical {
@@ -84,7 +93,7 @@
 
 .p-top-aboutService__textBlock {
   position: relative;
-  
+
 // .p-top-aboutService__logoList {
 //   font-size: 80px;
 //   line-height: 180px;
@@ -357,13 +366,12 @@
   &::before, &::after {
     position: absolute;
     display: block;
-    top: 0;
-    width: 7vw;
-    height: 110%;
+    top: 50%;
+    width: 32vw;
+    height: 10%;
     content: '';
     @include mq(u-sp) {
-      top: 10px;
-      height: 60px;
+      width: 30vw;
     }
   }
   &::before {
@@ -377,14 +385,10 @@
   }
 }
 
-.p-top-flowUpToWork__heading--bold {
-  font-weight: bold;
-}
-
 .p-top-flowUpToWork__menu {
   display: flex;
   justify-content: center;
-  width: 80%;
+  // width: 80%;
   margin: 0 auto 100px auto;
   @include mq(u-sp) {
     flex-direction: column;
@@ -397,19 +401,31 @@
   flex-direction: column;
   width: 100%;
   height: 220px;
-  padding: 10px;
-  border: 1px solid rgba($colorBlack, .4);
-  border-radius: 5px;
   @include mq(u-sp) {
     width: 50%;
   }
   &:nth-last-child(n+2) {
     position: relative;
-    @include mq(o-sp) {
-      margin-right: 60px;
-    }
     @include mq(u-sp) {
-      margin-bottom: 40px;
+      margin-bottom: 20px;
+    }
+    &::before {
+      position: absolute;
+      display: block;
+      background-color: $colorBlack;
+      content: '';
+      @include mq(o-sp) {
+        top:  18px;
+        right: -10px;
+        width: 3vw;
+        height: 1vh;
+      }
+      @include mq(u-sp) {
+        bottom: 0;
+        left: calc(50% - .5vw);
+        width: 1vw;
+        height: 7vh;
+      }
     }
     &::after { // 矢印の設定
       position: absolute;
@@ -417,15 +433,15 @@
       width: 0;
       height: 0;
       border-style: solid;
-      border-color: transparent transparent transparent #FF6363;
+      border-color: transparent transparent transparent $colorBlack;
       content: '';
       @include mq(o-sp) {
-        top: 100px;
-        right: -40px;
+        top: 10px;
+        right: -20px;
         border-width: 10px 0 10px 20px;
       }
       @include mq(u-sp) {
-        bottom: -40px;
+        bottom: -10px;
         left: calc(50% - 2vw); // 三角形の横幅分を引く
         border-width: 2vw 0 2vw 4vw;
         transform: rotate(90deg);
@@ -434,26 +450,60 @@
   }
 }
 
-.p-top-flowUpToWork__list__image {
-  object-fit: contain;
-  width: 100%;
-  height: auto;
-  margin: 0 auto;
-  @include mq(u-sp) {
-    margin-bottom: 20px;
-  }
+.p-top-flowUpToWork__list__order {
+  text-align: center;
 }
 
 .p-top-flowUpToWork__list__txt {
+  height: 15vh;
   font-size: 1vw;
   text-align: center;
-  // white-space: nowrap;
-  margin-top: auto;
+  margin-bottom: 10px;
   @include mq(u-sp) {
     font-size: 2.5vw;
   }
 }
 
+.p-top-flowUpToWork__list__image {
+  object-fit: contain;
+  width: 10vw;
+  height: 10vh;
+  margin: 0 auto;
+  @include mq(u-sp) {
+    margin-top: auto;
+    margin-bottom: 20px;
+  }
+}
+
+/*// -----------------------------------------------------------------
+// .p-top-pie
+// -----------------------------------------------------------------*/
+.p-top-pieList {
+  display: flex;
+  width: 100%;
+  margin: 0 auto;
+  @include mq(u-sp) {
+    align-items: center;
+    margin-bottom: 20px;
+  }
+}
+
+.p-top-pieItem {
+  margin-bottom: 100px;
+}
+
+.p-top-pieItem__category {
+  text-align: center;
+  font-size: 25px;
+  opacity: .6;
+  margin-bottom: 10px;
+}
+
+.p-top-pieItem__image {
+  width: 70%;
+  height: auto;
+  margin: 0 auto;
+}
 
 /*// -----------------------------------------------------------------
 // .p-top-project
@@ -468,9 +518,7 @@
 ---------------------------------------------------- */
 
 .p-top-project__heading {
-  font-size: 50px;
-  text-align: center;
-  letter-spacing: 10px;
+  @extend .p-top-flowUpToWork__heading;
 }
 
 .p-top-project__heading--bold {
@@ -488,13 +536,9 @@
 ---------------------------------------------------- */
 
 .p-top-project__list {
-  display: flex;
-  justify-content: center;
-  width: 85%;
+  width: 80%;
   margin: 0 auto;
-  &:nth-last-child(n+2) {
-    margin-right: 10px;
-  }
+  padding: 10px 0;
   @include mq(u-sp) {
     width: 70%;
     flex-direction: column;
@@ -502,16 +546,26 @@
   }
 }
 
+.p-top-project__outlineImg {
+  position: relative;
+  width: 20%;
+  height: auto;
+}
+
 /*
   .p-top-project__listItem
 ---------------------------------------------------- */
 
 .p-top-project__listItem {
-  padding: 10px;
-  border: 4px solid #707070;
-  background-color: #ECECEC;
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 75%;
+  border: 5px solid;
+  border-top-left-radius: 80px;
+  padding: 30px;
   &:nth-last-child(n+2) {
-    margin-right: 40px;
+    margin-right: 10px;
   }
   @include mq(u-sp) {
     width: 80%;
@@ -519,20 +573,6 @@
       margin-bottom: 120px;
       margin-right: 0;
     }
-  }
-}
-
-.p-top-project__listItem__jobCategory {
-  display: flex;
-  @include mq(o-sp) {
-    justify-content: space-between;
-    width: calc(350px * 3);
-    margin: 0 6%;
-  }
-  @include mq(u-sp) {
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 100px;
   }
 }
 
@@ -546,34 +586,15 @@
   }
 }
 
-.p-top-project__listItem__jobCategory {
-  position: relative;
-  display: inline-block;
-  top: -100px;
-  left: -100px;
-  max-width: 120px;
-  width: 100%;
-  height: auto;
-  margin-left: 25px;
-  text-align: center;
-  font-weight: 700;
-  line-height: 120px;
-  color: rgba( $colorBlack, .8);
-  border-radius: 50%;
-  box-shadow: 15px 15px 10px -5px rgba(0, 0, 0, .3);
-  @include mq(u-sp) {
-    top: -90px;
-  }
-}
-
 .p-top-project__listItem__goodMan {
-  margin: -110px 0 20px 0;
+  width: 70%;
+  height: auto;
+  margin: 0px auto 20px auto;
+  border: 15px solid;
   @include mq(u-sp) {
     margin-top: -220px;
   }
 }
-
-
 
 .p-top-project__listItem__developmentEnironment {
   display: flex;
@@ -598,13 +619,14 @@
 }
 
 .p-top-project__listItem__about {
-  font-size: 20px;
+  font-size: 17px;
   letter-spacing: 3px;
 }
 
-.p-top-project__listItem__feature {
+.p-top-project__listItem__feature > div {
   display: flex;
-  justify-content: space-around;
+  align-items: center;
+  justify-content: center;
 }
 
 
@@ -612,19 +634,12 @@
   .p-top-project__list__income
 -----------------------------------------------------------------*/
 .p-top-project__listItem__income__monthly {
-  text-align: center;
-  margin: -40px 0 10px 0;
+  @include projectIcon(money);
 }
 
 .p-top-project__listItem__income__price--emphasis {
   font-size: 24px;
   font-weight: bold;
-}
-
-.p-top-project__listItem__separator {
-  width: 2px;
-  height: 200px;
-  background-color: $colorBlack;
 }
 
 /*
@@ -633,60 +648,23 @@
 
 .p-top-project__listItem__working {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.p-top-project__listItem__working__image {
-  margin-top: 20px;
-  margin-bottom: 30px;
-}
-
-.p-top-project__listItem__working__week,
-.p-top-project__listItem__working__days {
+.p-top-project__listItem__working__week {
+  @include projectIcon(calender);
   text-align: center;
+  text-indent: -70px;
 }
 
 .p-top-project__listItem__working__days {
-  margin-top: auto;
+  text-indent: -20px;
 }
 
 .p-top-project__listItem__working__days--emphasis {
   font-weight: bold;
   font-size: 25px;
-}
-
-.p-top-project__listItem__working__week {
-  margin-top: auto;
-}
-
-/*// -----------------------------------------------------------------
-// .p-top-pie
-// -----------------------------------------------------------------*/
-.p-top-pieList {
-  display: flex;
-  width: 80%;
-  margin: 0 auto;
-  @include mq(u-sp) {
-    flex-direction: column;
-    align-items: center;
-  }
-}
-
-.p-top-pieItem {
-  margin-bottom: 100px;
-}
-
-.p-top-pieItem__title {
-  text-align: center;
-  font-size: 25px;
-  opacity: .6;
-  margin-bottom: 10px;
-}
-
-.p-top-pieItem__image {
-  width: 70%;
-  height: auto;
-  margin: 0 auto;
 }
 
 /*// -----------------------------------------------------------------
