Modified aboutService of responsive , footer layout and layout of faq

--- a/src/scss/foundation/_base.scss
+++ b/src/scss/foundation/_base.scss
@@ -14,6 +14,12 @@ a {
   text-decoration: none;
 }
 
+body {
+  // font-family: 'Hannotate SC','ヒラギノ角ゴシック','Hiragino Sans',sans-serif;
+  font-family: "Sawarabi Mincho";
+  // font-family: 'ヒラギノ角ゴ ProN W3','ヒラギノ角ゴ StdN','Hiragino Kaku Gothic StdN',sans-serif,'Hiragino Kaku Gothic ProN';
+}
+
 // デバッグ用
 // body * {
 //   outline: 1px dotted rgba(255,0,0,0.2) !important;
