--- a/src/ejs/template/_head.ejs
+++ b/src/ejs/template/_head.ejs
@@ -22,6 +22,7 @@
 <meta name="twitter:description" content="<%= description %>" />
 <meta name="twitter:image" content="" /><!--絶対パスで記述-->
 <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho" rel="stylesheet"> <!-- font -->
 
 <title><%= title %></title>
 </head>
