--- a/src/scss/object/component/_btn.scss
+++ b/src/scss/object/component/_btn.scss
@@ -8,7 +8,7 @@
   margin-bottom: 30px;
   padding: 2vh 6vw;
   font-size: 2vw;
-  background-color:#EEFF00;
+  background-color:rgba(#EEFF00, .4);
   border-radius: 35px;
   box-shadow: 0px 7px 3px 0px $colorBlack;
   letter-spacing: 2px;
@@ -16,16 +16,16 @@
   white-space: nowrap; // 文字おりかえさない
   &:hover {
     transform: scale(1.05);
+    background-color: #EEFF00;
   }
-
   @include mq('u-pc') {
     font-size: 20px;
     padding: 10px 50px;
+    // padding: 3vh 10vw;
   }
 
   @include mq('u-sp') {
     font-size: 15px;
-    padding: 10px 40px;
   }
 }
 
@@ -36,12 +36,17 @@
   box-shadow: 0px 7px 3px 0px $colorBlack;
   font-size: 1.5vw;
   padding: 2vh 4vw;
-  border-radius: 20px;
+  border-radius: 35px;
   color: $colorWhite;
   transition: all .5s;
+  white-space: nowrap;
   cursor: pointer;
   &:hover {
     transform: scale(1.05);
     background-color: rgba(#2DE531, 1);
+  }
+  @include mq('u-sp') {
+    font-size: 15px;
+    padding: 3vh 23vw;
   }
 }
