Add font to aboutService__bgLogo

--- a/src/scss/object/project/_home.scss
+++ b/src/scss/object/project/_home.scss
@@ -95,6 +95,7 @@
 }
 
 .p-top-aboutService__bgLogo {
+  font-family: 'Hannotate SC','ヒラギノ角ゴシック','Hiragino Sans',sans-serif;
   font-size: 520px;
   font-weight: bold;
   color: rgba(105, 105, 105, 0.2);
