--- a/src/scss/object/component/_footer.scss
+++ b/src/scss/object/component/_footer.scss
@@ -1,9 +1,39 @@
+.c-footer-company {
+  width: 100%;
+  text-align: center;
+}
+
 .c-footer-company__logo {
   width: 30%;
   display: block;
+  margin: 0 auto;
+  filter: drop-shadow(10px 10px 10px rgba(0,0,0,1.0)); // オブジェクトの形に沿って影
 }
 
-.c-footer-link {
-  display: flex;
-  align-items: flex-end;
+.c-footer-corporate {
+  width: 100%;
+  display: block;
+  margin-top: auto;
+}
+
+.c-footer-corporate__link {
+  background-color: green;
+  width: 15%;
+  display: block;
+  padding: 5px 20px;
+  border-radius: 10px;
+  margin: 0 auto;
+
+  &:hover {
+    transform: scale(1.05);
+  }
+}
+
+.c-footer-corporate__text {
+  font-size: 15px;
+  text-align: center;
+
+  @include mq(u-sp) {
+    font-size: 10px;
+  }
 }
